<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#B4B4B4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/defHeight"
        android:background="#000000"
        android:gravity="right|center"
        android:paddingRight = "10dp"
        android:text="@string/strRes"

        android:textColor="#FFFFFF"
        android:textSize="45sp" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/defHeight"
        android:layout_below="@id/textView"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnC"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="1"
            android:background="@drawable/btn_normal"
            android:text="@string/string_btnC"
            android:textSize="@dimen/defTextSize" />

        <Button
            android:id="@+id/btnDrop"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="1"
            android:background="@drawable/btn_normal"
            android:text="@string/string_btnDrop"
            android:textSize="@dimen/defTextSize" />

        <Button
            android:id="@+id/btnPer"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="1"
            android:background="@drawable/btn_normal"
            android:text="@string/string_btnPer"
            android:textSize="@dimen/defTextSize" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/defHeight"
        android:layout_below="@id/line1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="1"
            android:background="@drawable/btn_normal"
            android:text="@string/string_btn7"
            android:textSize="@dimen/defTextSize" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="1"
            android:background="@drawable/btn_normal"
            android:text="@string/string_btn8"
            android:textSize="@dimen/defTextSize" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="1"
            android:background="@drawable/btn_normal"
            android:text="@string/string_btn9"
            android:textSize="@dimen/defTextSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/defHeight"
        android:layout_below="@id/line2"
        android:layout_alignEnd="@+id/line5"

        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="1"
            android:background="@drawable/btn_normal"
            android:text="@string/string_btn4"
            android:textSize="@dimen/defTextSize" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="1"
            android:background="@drawable/btn_normal"
            android:text="@string/string_btn5"
            android:textSize="@dimen/defTextSize" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="1"
            android:background="@drawable/btn_normal"
            android:text="@string/string_btn6"
            android:textSize="@dimen/defTextSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line4"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/defHeight"
        android:layout_below="@id/line3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="1"
            android:background="@drawable/btn_normal"
            android:text="@string/string_btn1"
            android:textSize="@dimen/defTextSize" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="1"
            android:background="@drawable/btn_normal"
            android:text="@string/string_btn2"
            android:textSize="@dimen/defTextSize" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="1"
            android:background="@drawable/btn_normal"
            android:text="@string/string_btn3"
            android:textSize="@dimen/defTextSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line5"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/defHeight"
        android:layout_below="@id/line4"
        android:layout_alignEnd="@+id/line4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn0"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="2"
            android:background="@drawable/btn_normal"
            android:text="@string/string_btn0"
            android:textSize="@dimen/defTextSize" />

        <Button
            android:id="@+id/btnCom"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="0"
            android:background="@drawable/btn_normal"
            android:text="@string/string_btnCom"
            android:textSize="@dimen/defTextSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_toRightOf="@id/line2"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="1"
            android:background="@drawable/btn_orange"
            android:text="@string/string_btnDiv"
            android:textSize="@dimen/defTextSize" />

        <Button
            android:id="@+id/btnMul"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="1"
            android:background="@drawable/btn_orange"
            android:text="@string/string_btnMul"
            android:textSize="@dimen/defTextSize" />

        <Button
            android:id="@+id/btnMin"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="1"
            android:background="@drawable/btn_orange"
            android:text="@string/string_btnMin"
            android:textSize="@dimen/defTextSize" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="1"
            android:background="@drawable/btn_orange"
            android:text="@string/string_btnPlus"
            android:textSize="@dimen/defTextSize" />

        <Button
            android:id="@+id/btnRes"
            android:layout_width="@dimen/dim_width"
            android:layout_height="@dimen/defHeight"
            android:layout_weight="1"
            android:background="@drawable/btn_orange"
            android:text="@string/string_btnRes"
            android:textSize="@dimen/defTextSize" />
    </LinearLayout>

</RelativeLayout>

